--- a/rd_ui/app/views/personal.html
+++ b/rd_ui/app/views/personal.html
@@ -1,14 +1,15 @@
 <div class="container">
     <div class="row">
         <p>
-            <a href="/queries/new" class="btn btn-default">New Query</a>
+            <a ng-show="currentUser.hasPermission('create_query')" href="/queries/new" class="btn btn-default">New Query</a>
             <button ng-show="currentUser.hasPermission('create_dashboard')" type="button" class="btn btn-default" data-toggle="modal" href="#new_dashboard_dialog">New Dashboard</button>
-            <a href="/alerts/new" class="btn btn-default">New Alert</a>
+            <a ng-show="currentUser.hasPermission('create_alert')" href="/alerts/new" class="btn btn-default">New Alert</a>
+            <a ng-show="currentUser.hasPermission('create_user')" href="/users/new" class="btn btn-default">New User</a>
         </p>
     </div>
 
     <div class="row">
-        <div class="list-group col-md-6">
+        <div ng-show="currentUser.hasPermission('create_dashboard')" class="list-group col-md-6">
             <div class="list-group-item active">
                 Recent Dashboards
             </div>
@@ -18,13 +19,15 @@
             </div>
         </div>
 
-        <div class="list-group col-md-6">
+        <div ng-show="currentUser.hasPermission('create_query')" class="list-group col-md-6">
             <div class="list-group-item active">
                 Recent Queries
             </div>
             <a ng-href="/queries/{{query.id}}" class="list-group-item" ng-repeat="query in recentQueries">{{query.name}}</a>
         </div>
     </div>
+
+    <p ng-show="!currentUser.countries">To complete the registration, please contact your regional BI</p>
 
     <div ng-show="currentUser.hasPermission('admin')" class="row">
         <div class="list-group">
