--- a/rd_ui/app/views/users/edit.html
+++ b/rd_ui/app/views/users/edit.html
@@ -8,28 +8,35 @@
             <form name="userForm" ng-submit="saveChanges()" class="form">
                 <div class="form-group">
                     <label>Name</label>
-                    <input type="string" placeholder="" class="form-control" ng-model="user.name">
+                    <input type="string" placeholder="" class="form-control" ng-model="user.name" required>
                 </div>
 
                 <div class="form-group">
                     <label>Email</label>
-                    <input type="string" placeholder="" class="form-control" ng-model="user.email">
+                    <input type="string" placeholder="" class="form-control" ng-model="user.email" required>
                 </div>
 
                 <div class="form-group">
                     <label for="userCountries">Country</label>
-                      <ui-select multiple tagging sortable="true" ng-model="$parent.user.countries" ng-disabled="disabled" style="width: 300px;">
-                        <ui-select-match placeholder="Select person...">{{$item.name}}</ui-select-match>
+                      <ui-select sortable="true" ng-model="$parent.user.countries" ng-disabled="disabled" style="width: 300px;" required>
+                        <ui-select-match placeholder="Select country...">{{$select.selected.code}} - {{$select.selected.name}}</ui-select-match>
 
-                        <ui-select-choices repeat="country in (user.countries||countries) | filter: $select.search">
+                        <ui-select-choices repeat="country in countries | filter: $select.search">
+                          <small ng-bind-html="country.code | trustAsHtml"></small>
                           <span ng-bind-html="country.name | trustAsHtml"></span>
                         </ui-select-choices>
                       </ui-select>
                 </div>
 
                 <div class="form-group">
+                  <label>Status</label>
+                  <input type="checkbox" ng-checked="user.status" aria-label="status" ng-model="user.status">
+                </div>
+
+                <div class="form-group">
                     <button class="btn btn-primary" ng-disabled="!userForm.$valid">Save</button>
                 </div>
+
             </form>
         </div>
     </div>
