--- a/rd_ui/app/views/data_sources/form.html
+++ b/rd_ui/app/views/data_sources/form.html
@@ -7,6 +7,10 @@
         <label for="type">Type</label>
         <select name="type" class="form-control" ng-options="type.type as type.name for type in dataSourceTypes" ng-model="dataSource.type"></select>
     </div>
+    <div class="form-group">
+        <label for="geo_value">Geo Value</label>
+        <input type="text" name="geo_value" class="form-control" ng-model="dataSource.geo_value" />
+    </div>
     <div class="form-group" ng-class='{"has-error": !inner.input.$valid}' ng-form="inner" ng-repeat="(name, input) in type.configuration_schema.properties">
         <label>{{input.title || name | capitalize}}</label>
         <input name="input" type="{{input.type}}" class="form-control" ng-model="dataSource.options[name]" ng-required="input.required"
