--- a/rd_ui/app/views/users/list.html
+++ b/rd_ui/app/views/users/list.html
@@ -7,10 +7,12 @@
             <p>
                 <a href="/users/new" class="btn btn-default"><i class="fa fa-plus"></i> New User</a>
             </p>
+            <rd-tabs tabs-collection='tabs' selected-tab='selectedTab'></rd-tabs>
 
             <smart-table rows="users" columns="gridColumns"
                          config="gridConfig"
                          class="table table-condensed table-hover"></smart-table>
+            {{users}}
         </div>
     </div>
 </div>
