Add the markerclusters visualization editor template

--- a/rd_ui/app/views/visualizations/markercluster_editor.html
+++ b/rd_ui/app/views/visualizations/markercluster_editor.html
@@ -1,3 +1,303 @@
 <div class="form-horizontal">
-NOTHING HERE (yet)
+  <fieldset>
+    <legend>General Configs</legend>
+
+    <div class="form-group">
+        <label class="col-lg-2">Description</label>
+        <div class="col-sm-4">
+          <textarea class='form-control' ng-model="visualization.description"></textarea>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-lg-2">Map width (%)</label>
+        <div class="col-sm-4">
+            <input class="form-control" type="number" ng-model="visualization.options.general.width" />
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-lg-2">Map height (px)</label>
+        <div class="col-sm-4">
+            <input class="form-control" type="number" ng-model="visualization.options.general.height" />
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-lg-2">Latitude column name</label>
+        <div class="col-sm-4">
+            <select ng-options="name for name in queryResult.columnNames" ng-model="visualization.options.general.latColName" class="form-control"></select>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-lg-2">Longitude column name</label>
+        <div class="col-sm-4">
+            <select ng-options="name for name in queryResult.columnNames" ng-model="visualization.options.general.lonColName" class="form-control"></select>
+        </div>
+    </div>
+
+  </fieldset>
+
+  <fieldset>
+    <legend>Leaflet</legend>
+    <em>You can find the docs <a href="https://github.com/angular-ui/ui-leaflet/blob/3924aec0e755c16ce7be839089022e212e361c5e/doc/defaults-attribute.md" title="angular-ui-leaflet docs" target="new">here</a> </em>
+    <br />
+
+
+
+
+
+    <div class="form-group">
+        <label class="col-lg-2">Max zoom</label>
+        <div class="col-sm-4">
+            <input class="form-control" type="number" ng-model="visualization.options.general.maxZoom" min=1 max=20 />
+        </div>
+    </div>
+
+
+
+    <div class="form-group">
+        <label class="col-lg-2">Min zoom</label>
+        <div class="col-sm-4">
+            <input class="form-control" type="number" ng-model="visualization.options.general.minZoom" min=1 max=20 />
+        </div>
+    </div>
+
+
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" ng-model="visualization.options.leaflet.keyboard">
+        <i class="input-helper"></i> keyboard
+      </label>
+    </div>
+
+
+
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" ng-model="visualization.options.leaflet.dragging">
+        <i class="input-helper"></i> dragging
+      </label>
+    </div>
+
+
+
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" ng-model="visualization.options.leaflet.zoomControl">
+        <i class="input-helper"></i> zoomControl
+      </label>
+    </div>
+
+
+
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" ng-model="visualization.options.leaflet.doubleClickZoom">
+        <i class="input-helper"></i> doubleClickZoom
+      </label>
+    </div>
+
+
+
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" ng-model="visualization.options.leaflet.scrollWheelZoom">
+        <i class="input-helper"></i> scrollWheelZoom
+      </label>
+    </div>
+
+
+
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" ng-model="visualization.options.leaflet.tap">
+        <i class="input-helper"></i> tap
+      </label>
+    </div>
+
+
+
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" ng-model="visualization.options.leaflet.attributionControl">
+        <i class="input-helper"></i> attributionControl
+      </label>
+    </div>
+
+
+
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" ng-model="visualization.options.leaflet.zoomAnimation">
+        <i class="input-helper"></i> zoomAnimation
+      </label>
+    </div>
+
+
+
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" ng-model="visualization.options.leaflet.fadeAnimation">
+        <i class="input-helper"></i> fadeAnimation
+      </label>
+    </div>
+
+
+
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" ng-model="visualization.options.leaflet.markerZoomAnimation">
+        <i class="input-helper"></i> markerZoomAnimation
+      </label>
+    </div>
+
+
+
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" ng-model="visualization.options.leaflet.worldCopyJump">
+        <i class="input-helper"></i> worldCopyJump
+      </label>
+    </div>
+
+
+
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" ng-model="visualization.options.leaflet.crs">
+        <i class="input-helper"></i> crs
+      </label>
+    </div>
+
+
+
+
+  </fieldset>
+
+  <fieldset>
+    <legend>Marker Cluster</legend>
+    <em>You can find the docs <a href="" title="leaflet markercluster docs" target="new">here</a> </em>
+    <br>
+
+
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" ng-model="visualization.options.markercluster.showCoverageOnHover">
+          <i class="input-helper"></i>showCoverageOnHover
+        </label>
+      </div>
+
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" ng-model="visualization.options.markercluster.zoomToBoundsOnClick">
+          <i class="input-helper"></i>zoomToBoundsOnClick
+        </label>
+      </div>
+
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" ng-model="visualization.options.markercluster.spiderfyOnMaxZoom">
+          <i class="input-helper"></i>spiderfyOnMaxZoom
+        </label>
+      </div>
+
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" ng-model="visualization.options.markercluster.removeOutsideVisibleBounds">
+          <i class="input-helper"></i>removeOutsideVisibleBounds
+        </label>
+      </div>
+
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" ng-model="visualization.options.markercluster.animate">
+          <i class="input-helper"></i>animate
+        </label>
+      </div>
+
+      <fieldset>
+        <legend>Other configs</legend>
+
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" ng-model="visualization.options.markercluster.animateAddingMarkers">
+            <i class="input-helper"></i>animateAddingMarkers
+          </label>
+        </div>
+
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" ng-model="visualization.options.markercluster.disableClusteringAtZoom">
+            <i class="input-helper"></i>disableClusteringAtZoom
+          </label>
+        </div>
+
+        <div class="form-group">
+            <label class="col-lg-2">maxClusterRadius</label>
+            <div class="col-sm-4">
+                <input class="form-control" type="number" ng-model="visualization.options.markercluster.maxClusterRadius" />
+            </div>
+        </div>
+
+
+
+
+
+
+      <fieldset>
+        <legend>Advanced</legend>
+
+        <!-- https://github.com/Leaflet/Leaflet.markercluster#other-options -->
+
+
+
+        <!-- polygonOptions -->
+
+
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" ng-model="visualization.options.markercluster.singleMarkerMode">
+            <i class="input-helper"></i>singleMarkerMode
+          </label>
+        </div>
+
+        <div class="form-group">
+            <label class="col-lg-2">spiderLegPolylineOptions</label>
+            <div class="col-sm-4">
+              <textarea class='form-control' ng-model="visualization.options.markercluster.spiderLegPolylineOptions"></textarea>
+            </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-lg-2">spiderfyDistanceMultiplier</label>
+          <div class="col-sm-4">
+            <input class="form-control" type="number" ng-model="visualization.options.markercluster.spiderfyDistanceMultiplier" min=0 max=1 step=0.1 />
+          </div>
+        </div>
+
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" ng-model="visualization.options.markercluster.chunkedLoading">
+            <i class="input-helper"></i>chunkedLoading
+          </label>
+        </div>
+
+        <div class="form-group">
+            <label class="col-lg-2">chunkInterval</label>
+            <div class="col-sm-4">
+                <input class="form-control" type="number" ng-model="visualization.options.markercluster.chunkInterval" />
+            </div>
+        </div>
+
+        <div>
+            <label class="col-lg-2">chunkDelay</label>
+            <div class="col-sm-4">
+                <input class="form-control" type="number" ng-model="visualization.options.markercluster.chunkDelay" />
+            </div>
+        </div>
+
+
+  </fieldset>
+
 </div>
