Add center options to markercluster visualization

--- a/rd_ui/app/views/visualizations/markercluster_editor.html
+++ b/rd_ui/app/views/visualizations/markercluster_editor.html
@@ -45,6 +45,28 @@
 
 
 
+    <div class="form-group">
+        <label class="col-lg-2">Center: Latitude</label>
+        <div class="col-sm-4">
+            <input class="form-control" type="number" ng-model="visualization.options.leaflet.center.lat" />
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        <label class="col-lg-2">Center: Longitude</label>
+        <div class="col-sm-4">
+            <input class="form-control" type="number" ng-model="visualization.options.leaflet.center.lng" />
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        <label class="col-lg-2">Center: Zoom</label>
+        <div class="col-sm-4">
+            <input class="form-control" type="number" ng-model="visualization.options.leaflet.center.zoom" />
+        </div>
+    </div>
 
 
     <div class="form-group">
