Fix: min/max zoom markercluster configs set to right place

--- a/rd_ui/app/views/visualizations/markercluster_editor.html
+++ b/rd_ui/app/views/visualizations/markercluster_editor.html
@@ -72,7 +72,7 @@
     <div class="form-group">
         <label class="col-lg-2">Max zoom</label>
         <div class="col-sm-4">
-            <input class="form-control" type="number" ng-model="visualization.options.general.maxZoom" min=1 max=20 />
+            <input class="form-control" type="number" ng-model="visualization.options.leaflet.maxZoom" min=1 max=20 />
         </div>
     </div>
 
@@ -81,7 +81,7 @@
     <div class="form-group">
         <label class="col-lg-2">Min zoom</label>
         <div class="col-sm-4">
-            <input class="form-control" type="number" ng-model="visualization.options.general.minZoom" min=1 max=20 />
+            <input class="form-control" type="number" ng-model="visualization.options.leaflet.minZoom" min=1 max=20 />
         </div>
     </div>
 
