Fix markercluster width to 100%

--- a/rd_ui/app/views/visualizations/markercluster.html
+++ b/rd_ui/app/views/visualizations/markercluster.html
@@ -5,7 +5,7 @@
     markers="markers"
     layers="layers"
     defaults="visualization.options.leaflet"
-    width={{visualization.options.general.width+'%'}}
+    width="100%"
     height={{visualization.options.general.height+'px'}}
     ></leaflet>
 
